--- a/pom.xml
+++ b/pom.xml
@@ -393,7 +393,7 @@
     <version.org.jboss.ironjacamar>1.1.1.Final</version.org.jboss.ironjacamar>
     <version.org.jboss.ws>1.0.2.Final</version.org.jboss.ws>
     <version.org.jboss.resteasy>3.0.5.Final</version.org.jboss.resteasy>
-    <version.org.jboss.weld>2.1.0.Final</version.org.jboss.weld>
+    <version.org.jboss.weld>2.2.6.Final</version.org.jboss.weld>
     <version.org.apache.activemq>1.0.0</version.org.apache.activemq>
     <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence>
     <version.org.jboss.spec.javax.interceptor>1.0.0.Final</version.org.jboss.spec.javax.interceptor>
@@ -433,7 +433,9 @@
     <version.junit>4.11</version.junit>
     <version.org.jboss.byteman>2.1.3</version.org.jboss.byteman>
     <version.org.jboss.arquillian.core>1.1.7.Final</version.org.jboss.arquillian.core>
+    <version.org.jboss.arquillian.container.weld>1.0.0.CR8</version.org.jboss.arquillian.container.weld>
     <version.org.jboss.jboss-transaction-spi>7.3.0.Final</version.org.jboss.jboss-transaction-spi>
+    <version.javax.javaee-api>7.0</version.javax.javaee-api>
 
     <!-- Maven plugin versions -->
     <version.org.codehaus.mojo.jboss-maven-plugin>1.5.0</version.org.codehaus.mojo.jboss-maven-plugin>
