JBTM-2485 Updated to use the nexus plugin for deployment

--- a/XTS/byteman_support/pom.xml
+++ b/XTS/byteman_support/pom.xml
@@ -19,14 +19,11 @@
     <description>Reusable Byteman rules for xts</description>
     <build>
         <plugins>
-            <plugin>
-              <inherited>false</inherited>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-deploy-plugin</artifactId>
-              <configuration>
-                <skip>false</skip>
-              </configuration>
-            </plugin>
+          <plugin>
+            <inherited>false</inherited>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+          </plugin>
         </plugins>
     </build>
     <dependencies>
