--- a/blacktie/common/java/pom.xml
+++ b/blacktie/common/java/pom.xml
@@ -71,12 +71,9 @@
     <build>
         <plugins>
             <plugin>
-                <inherited>false</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>false</skip>
-                </configuration>
+              <inherited>false</inherited>
+              <groupId>org.sonatype.plugins</groupId>
+              <artifactId>nexus-staging-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <inherited>true</inherited>
