--- a/blacktie/pom.xml
+++ b/blacktie/pom.xml
@@ -375,14 +375,11 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            <plugin>
-                <inherited>false</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>false</skip>
-                </configuration>
-            </plugin>
+          <plugin>
+            <inherited>false</inherited>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+          </plugin>
         </plugins>
     </build>
     <profiles>
