--- a/blacktie/utils/cpp-plugin/pom.xml
+++ b/blacktie/utils/cpp-plugin/pom.xml
@@ -170,9 +170,14 @@
                 <version>2.3</version>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.5</version>
+              <groupId>org.sonatype.plugins</groupId>
+              <artifactId>nexus-staging-maven-plugin</artifactId>
+              <extensions>true</extensions>
+              <configuration>
+                <serverId>jboss-releases-repository</serverId>
+                <nexusUrl>https://repository.jboss.org/nexus/</nexusUrl>
+                <autoReleaseAfterClose>true</autoReleaseAfterClose>
+              </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
