--- a/osgi/jta/pom.xml
+++ b/osgi/jta/pom.xml
@@ -108,14 +108,11 @@
 		   </plugins>
 	   </pluginManagement>
 	   <plugins>
-       <plugin>
-         <inherited>false</inherited>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-deploy-plugin</artifactId>
-         <configuration>
-           <skip>false</skip>
-         </configuration>
-       </plugin>
+      <plugin>
+        <inherited>false</inherited>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+      </plugin>
 		   <plugin>
 			   <groupId>org.apache.felix</groupId>
 			   <artifactId>maven-bundle-plugin</artifactId>
