JBTM-2499 Update wildfly-blacktie to add the dependecy of the activemq messaging service

--- a/blacktie/wildfly-blacktie/subsystem/pom.xml
+++ b/blacktie/wildfly-blacktie/subsystem/pom.xml
@@ -100,7 +100,7 @@
 
         <dependency>
             <groupId>org.wildfly</groupId>
-            <artifactId>wildfly-messaging</artifactId>
+            <artifactId>wildfly-messaging-activemq</artifactId>
             <version>${version.org.wildfly.wildfly-parent}</version>
         </dependency>
 
