--- a/blacktie/wildfly-blacktie/subsystem/src/main/resources/org/wildfly/extension/blacktie/LocalDescriptions.properties
+++ b/blacktie/wildfly-blacktie/subsystem/src/main/resources/org/wildfly/extension/blacktie/LocalDescriptions.properties
@@ -26,3 +26,4 @@ blacktie.remove=Operation Removes subsystem
 
 blacktie.connection-factoryname=Stompconnect factory name
 blacktie.socket-binding=Stompconnect socket bind
+blacktie.mq-server=Stompconnect mq server
