--- a/pom.xml
+++ b/pom.xml
@@ -401,7 +401,7 @@
     <version.org.jboss.ws>1.0.2.Final</version.org.jboss.ws>
     <version.org.jboss.resteasy>3.0.5.Final</version.org.jboss.resteasy>
     <version.org.jboss.weld>2.2.9.Final</version.org.jboss.weld>
-    <version.org.apache.activemq>1.0.0</version.org.apache.activemq>
+    <version.org.apache.activemq>1.1.0-wildfly-6</version.org.apache.activemq>
     <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence>
     <version.org.jboss.spec.javax.interceptor>1.0.0.Final</version.org.jboss.spec.javax.interceptor>
     <version.org.jboss.spec.javax.transaction>1.0.0.Final</version.org.jboss.spec.javax.transaction>
