[JBTM-2532] Enable code coverage for XTS

--- a/ArjunaJTA/jdbc/pom.xml
+++ b/ArjunaJTA/jdbc/pom.xml
@@ -150,6 +150,11 @@
   <profiles>
     <profile>
       <id>codeCoverage</id>
+      <activation>
+        <property>
+          <name>codeCoverage</name>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
