--- a/ArjunaJTA/spi/pom.xml
+++ b/ArjunaJTA/spi/pom.xml
@@ -272,6 +272,11 @@
         </profile>
         <profile>
             <id>codeCoverage</id>
+            <activation>
+                <property>
+                    <name>codeCoverage</name>
+                </property>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
