--- a/XTS/localjunit/disabled-context-propagation/pom.xml
+++ b/XTS/localjunit/disabled-context-propagation/pom.xml
@@ -100,6 +100,9 @@
             <id>arq</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>codeCoverage</name>
+                </property>
             </activation>
             <build>
                 <plugins>
