--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -172,24 +172,12 @@
 
     <profiles>
         <profile>
-            <id>codeCoverage</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/DataManagementTest.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>arq</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>codeCoverage</name>
+                </property>
             </activation>
             <dependencies>
                 <dependency>
@@ -295,6 +283,32 @@
                     <scope>test</scope>
                 </dependency>
             </dependencies>
+        </profile>
+        <profile>
+            <id>codeCoverage</id>
+            <activation>
+                <property>
+                    <name>codeCoverage</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <systemPropertyVariables combine.children="append">
+                                <server.jvm.args>${jvm.args.jacoco}</server.jvm.args>
+                            </systemPropertyVariables>
+                            <excludes>
+                                <exclude>**/DataManagementTest.java</exclude>
+                                <exclude>**/BABridgedTest.java</exclude>
+                                <exclude>**/BAParticipantCompletionTest.java</exclude>
+                                <exclude>**/BACoordinatorCompletionTest.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>release</id>
