--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -484,6 +484,11 @@
   </profile>
     <profile>
         <id>codeCoverage</id>
+        <activation>
+            <property>
+                <name>codeCoverage</name>
+            </property>
+        </activation>
         <build>
             <plugins>
                 <plugin>
