--- a/ArjunaJTA/jta/pom.xml
+++ b/ArjunaJTA/jta/pom.xml
@@ -422,6 +422,11 @@
 	</profile>
     <profile>
         <id>codeCoverage</id>
+        <activation>
+            <property>
+                <name>codeCoverage</name>
+            </property>
+        </activation>
         <build>
             <plugins>
                 <plugin>
