--- a/ArjunaJTS/narayana-jts-ibmorb/pom.xml
+++ b/ArjunaJTS/narayana-jts-ibmorb/pom.xml
@@ -298,6 +298,11 @@
     </profile>
     <profile>
       <id>codeCoverage</id>
+      <activation>
+        <property>
+          <name>codeCoverage</name>
+        </property>
+      </activation>
       <build>
         <plugins>
         <plugin>
