--- a/compensations/pom.xml
+++ b/compensations/pom.xml
@@ -159,24 +159,12 @@
 
     <profiles>
         <profile>
-            <id>codeCoverage</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/DataManagementTest.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>arq</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>codeCoverage</name>
+                </property>
             </activation>
             <dependencies>
                 <dependency>
@@ -398,6 +386,29 @@
                             <includes>
                                 <include>**/*TestWeld.java</include>
                             </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>codeCoverage</id>
+            <activation>
+                <property>
+                    <name>codeCoverage</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <systemPropertyVariables combine.children="append">
+                                <server.jvm.args>${jvm.args.jacoco}</server.jvm.args>
+                            </systemPropertyVariables>
+                            <excludes>
+                                <exclude>**/DataManagementTest.java</exclude>
+                            </excludes>
                         </configuration>
                     </plugin>
                 </plugins>
