--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -395,6 +395,33 @@
 			</plugins>
 		</build>
 	</profile>
+	<profile>
+		<id>mariadb-jdbc-store</id>
+		<dependencies>
+			<dependency>
+				<groupId>org.mariadb.jdbc</groupId>
+				<artifactId>mariadb-java-client</artifactId>
+				<version>${version.mariadb}</version>
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+		<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<systemProperties>
+							<property>
+								<name>com.arjuna.ats.arjuna.common.propertiesFile</name>
+								<value>mariadbjbossts-properties.xml</value>
+							</property>
+						</systemProperties>
+					</configuration>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
 
 	<profile>
 		<id>mssql-jdbc-store</id>
