--- a/pom.xml
+++ b/pom.xml
@@ -431,6 +431,7 @@
     <version.com.ibm>9.7</version.com.ibm>
     <version.postgresql>9.0-801.jdbc4</version.postgresql>
     <version.mysql>5.1.28</version.mysql>
+    <version.mariadb>1.2.2</version.mariadb>
     <version.com.microsoft.sqlserver>mssql2005_sqljdbc_2.0</version.com.microsoft.sqlserver>
     <version.sun.jdk>jdk</version.sun.jdk>
     <version.asm>3.3.1</version.asm>
