--- a/osgi/pom.xml
+++ b/osgi/pom.xml
@@ -41,6 +41,12 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
+        <groupId>org.osgi</groupId>
+        <artifactId>org.osgi.compendium</artifactId>
+        <version>5.0.0</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
         <groupId>org.jboss.arquillian.junit</groupId>
         <artifactId>arquillian-junit-container</artifactId>
         <version>${version.org.jboss.arquillian.core}</version>
